--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
+/.idea
 /build
-/captures
 /gradlew.bat
 /settings.gradle
 /gradlew
