完成主界面、我的酒店、酒水点单界面以及点单弹出框界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
         <activity
             android:name=".activity.HotelActivity"
             android:screenOrientation="landscape"/>
+        <activity
+            android:name=".activity.GoodsActivity"
+            android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
