完成了消费记录查看，修复了提交订单数量错误的bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         <activity
             android:name=".activity.GoodsActivity"
             android:screenOrientation="landscape"/>
+        <activity
+            android:name=".activity.SpentActivity"
+            android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
