完成了播放器MV功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,12 @@
         <activity
             android:name=".activity.SpentActivity"
             android:screenOrientation="landscape"/>
+        <activity
+            android:name=".activity.MvActivity"
+            android:screenOrientation="landscape"/>
+        <activity
+            android:name=".activity.PlayerActivity"
+            android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
